# rs-kvstore

./: .gitignore  Cargo.toml  README.md  build.rs
examples/internal/btree/rs-btree-kvstore/: Cargo.toml  rs-btree-kvstore  run.sh  test.sh
examples/internal/btree/rs-btree-kvstore/src/: main.rs
proto/rkv/v1/: kvstore.proto
src/: bucket.rs  cmd.rs  internal.rs  lib.rs  uuid.rs
src/bucket/: bkt.rs  checker.rs  prefix.rs  svc.rs
src/cmd/: del.rs  drop.rs  exists.rs  get.rs  insert.rs  set.rs  truncate.rs
src/internal/: btree.rs  core.rs  kv.rs  locked.rs
src/internal/bucket/: btree.rs
