[package]
name = "rs-kvstore"
version = "0.1.0"
edition = "2021"

[dependencies.prost]
version = "0.11.9"

[dependencies.prost-types]
version = "0.11.9"

[dependencies.tonic]
version = "0.9.2"

[build-dependencies.tonic-build]
version = "0.9.2"


[dependencies.redis]
version = "0.23"
optional = true
features = [
  "aio",
]

[dependencies.bytes]
version = "1"
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[dependencies.futures-util]
version = "0.3"
optional = true

[dependencies.pin-project-lite]
version = "0.2"
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[dependencies.tokio-util]
version = "0.7"
optional = true

[dependencies.tokio]
version = "1"
optional = true

[dependencies.socket2]
version = "0.4"
optional = true

[dependencies.ryu]
version = "1"
optional = true

[dependencies.itoa]
version = "1"
optional = true

[dependencies.percent-encoding]
version = "2"
optional = true

[dependencies.url]
version = "2"
optional = true

[features]
kvredis = [
  "redis",
  "redis/aio",
  "redis/async-std-comp",
  "redis/connection-manager",
  "ryu",
  "itoa",
  "percent-encoding",
  "url",
  "bytes",
  "futures",
  "futures-util",
  "pin-project-lite",
  "tokio-util",
  "tokio",
  "socket2",
]

locked = []
bucket_svc = []

default = [
	"kvredis",
	"locked",
	"bucket_svc",
]
