[package]
name = "rs-btree-kvstore"
version = "0.1.0"
edition = "2021"

[dependencies.rs-kvstore]
path = "../../../.."
features = [
  "kvredis",
]

[dependencies.tokio]
version = "1"
features = [
  "rt-multi-thread",
]

[dependencies.tonic]
version = "0.9.2"

[dependencies.tonic-health]
version = "0.9.2"

